--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+      <!-- navbar-section -->
     <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="#">Trust Digital Shop Care</a>
+          <a class="navbar-brand text-white fs-3" href="#">Trust Digital Shop Care</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,8 +46,43 @@
           </div>
         </div>
       </nav>
-
-
+     <!-- header-section -->
+     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="./images/shopping picture-1.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-2.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-3.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-4.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-5.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-6.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-7.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./images/shopping picture-8.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
    <!-- bootstarp jss link -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
