--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap-Project-One</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- bootstarp css cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-light">
       <!-- navbar-section -->
     <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid">
@@ -50,28 +51,28 @@
      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
-          <img src="./images/shopping picture-1.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-1.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-2.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-2.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-3.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-3.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-4.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-4.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-5.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-5.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-6.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-6.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-7.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-7.jpg" class="d-block w-100 img-fluid" style="height: 600px;" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="./images/shopping picture-8.jpg" class="d-block w-100 " style="height: 600px;" alt="...">
+          <img src="./images/shopping picture-8.jpg" class="d-block w-100 img-fluid " style="height: 600px;" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -83,6 +84,106 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!-- section-1 -->
+    <section class="container mt-5">
+        <div class="row">
+          <div class="col-lg-5">
+            <img class=" h-50 " src="./images/shopping picture-9.jpg" alt="">
+          </div>
+          <div class="col-lg-7">
+            <div class="row">
+              <div class="col-md-4">
+                <img class=" img-fluid h-50 w-100" src="./images/shoes.jpg" alt="">
+                <p>Shoes</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$20.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img class="img-fluid w-100 h-50" src="./images/jeans.jpg" alt="">
+                <p>Jeans Pant</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$40.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img class="img-fluid w-100 h-50" src="./images/watches.jpg" alt="">
+                <p>Smart Watches</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$80.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img class="img-fluid w-100 h-50" src="./images/shirt.jpg" alt="">
+                <p>Shirt</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$30.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img class="img-fluid w-100 h-50" src="./images/half-pant-men.jpg" alt="">
+                <p>Half-pant</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$15.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img class="img-fluid w-100 h-50" src="./images/t-shirt.jpg" alt="">
+                <p>T-Shirt</p>
+                <div class="d-flex justify-content-between">
+                  <span class="text-primary">$25.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
+    </section>
 
    <!-- bootstarp jss link -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
