--- a/index.html
+++ b/index.html
@@ -613,8 +613,35 @@
     </div>
     </section>
     </main>
-    <footer>
-
+    <footer class="container">
+       <p class="h2 text-warning text-center">Trust Digital Shop Care</p>
+         <hr class="text-danger">
+        <div class="row">
+          <div class="col-md-3">
+            <p class=" h4 mb-3 text-secondary">About Us</p>
+            <p class=" text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, quaerat!</p>
+          </div>
+          <div class="col-md-3">
+            <p class=" h4 mb-3 text-secondary">Feature</p>
+            <p class=" text-primary mb-2"> About us</p>
+            <p class=" text-primary mb-2">Best products</p>
+            <p class=" text-primary mb-2">terms & Condition</p>
+          </div>
+          <div class="col-md-3">
+            <p class=" h4 mb-3 text-secondary">General links</p>
+            <p class=" text-primary mb-2"> Blog</p>
+            <p class=" text-primary mb-2">Tracking Orders</p>
+            <p class=" text-primary mb-2">Become Seller</p>
+          </div>
+          <div class="col-md-3">
+            <p class=" h4 mb-3 text-secondary">Helpful</p>
+            <p class=" text-primary mb-2"> Flush Sale</p>
+            <p class=" text-primary mb-2">FAQ</p>
+            <p class=" text-primary mb-2">Support</p>
+          </div>
+        </div>
+        <hr class="text-danger">
+        <p class="text-center text-black"><i class="bi bi-c-circle"></i> copyright II 2023</p>
     </footer>
    <!-- bootstarp jss link -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
